cmake_minimum_required(VERSION 3.12)

set(PATCH_VERSION "1" CACHE INTERNAL "Patch version")
set(PROJECT_VESRION 0.0.${PATCH_VERSION})
set(IP_FILTER_PROJECT_NAME ip_filter CACHE INTERNAL "")

project(ip_filter VERSION ${PROJECT_VESRION})

file(GLOB SOURCES *.cpp *.h ipv4/*.cpp ipv4/*.h utils/*.cpp utils/*.h)

add_executable(${IP_FILTER_PROJECT_NAME} ${SOURCES})

set_target_properties(${IP_FILTER_PROJECT_NAME} PROPERTIES
    CXX_STANDARD 17
    CXX_STANDARD_REQUIRED ON
)

install(TARGETS ${IP_FILTER_PROJECT_NAME} RUNTIME DESTINATION bin)

set(CPACK_GENERATOR DEB)
set(CPACK_PACKAGE_VERSION_MAJOR "${PROJECT_VERSION_MAJOR}")
set(CPACK_PACKAGE_VERSION_MINOR "${PROJECT_VERSION_MINOR}")
set(CPACK_PACKAGE_VERSION_PATCH "${PROJECT_VERSION_PATCH}")
set(CPACK_PACKAGE_CONTACT togushakov@gmail.com)
include(CPack)
